[tool.poetry]
name = "archipelago"
version = "0.1.0"
description = ""
authors = ["peter <peter@peterblain.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
xrpl-py = "^1.7.0"
pytest-asyncio = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
